add tabel gambar Pertanyaan and add upload delete in editor Gambar

--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -54,3 +54,9 @@
 .navbar{
     z-index: 1035;
 }
+
+pre.ql-syntax {
+    background-color: #23241f;
+    color: #f8f8f2;
+    overflow: visible;
+  }
